<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criarNovaAulaHeader"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/materiaEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/materia"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/criarNovaAulaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D1994C"
            android:layout_gravity="right"
            android:text="@string/adicionar"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>